--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 <script src="http://code.jquery.com/jquery-latest.min.js"
         type="text/javascript"></script>
     <script src="lib/js/ionic.bundle.js"></script>
-       <script src="http://54.187.219.192:1234/socket.io/socket.io.js"></script>
+       <script src="http://server_ip/socket.io/socket.io.js"></script>
       <script src="js/app.js"></script>
 
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
